--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "Quentin Engles <hollowdoor99@gmail.com> (https://hollowdoor.github.io/)",
   "license": "MIT",
   "dependencies": {
-    "es-spawn": "^1.0.7"
+    "es-spawn": "^1.0.7",
+    "mz": "^2.6.0"
   },
   "devDependencies": {},
   "directories": {
     "test": "test"
   },
+  "preferGlobal": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hollowdoor/engrave.git"
